--- a/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
+++ b/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 02:32:52 GMT
+    - Sun, 25 Mar 2018 20:45:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RPJdq%2CpbF%2ChC4W7ewaFIv1; path=/
+    - PHPSESSID=iR6IueoY8SY-T0iAwW9y72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 02:32:53 GMT
+recorded_at: Sun, 25 Mar 2018 20:45:15 GMT
